2007-01-25  GatoLoko  <GatoLoko@gmail.com>

 * Corregido el bug que probocaba la ejecucion de Rhythmbox o Banshee al
    cargar el script.
 * Publicado como RC1


2007-01-22  GatoLoko  <GatoLoko@gmail.com>

 * Agregada la funcion azureus_cb y el comando "/azureus" para mostrar
     informacion sobre las transferencias de este programa.
 * Modificado el menu para activar el acceso a la funcion azureus_cb.


2007-01-22  GatoLoko  <GatoLoko@gmail.com>

 * Agregada la funcion "rss_cb" que muestra las noticias recientes de los
     de los feeds configurados.
 * Agregada la funcion "rsslista_cb" que muestra la lista de feeds.
 * Cambiado el formato del Changelog. Las entradas anteriores se conservan con
     fecha 31 de diciembre del 2006.
 * Agregada la ayuda para las funciones de gestion RSS.
 * Publicado como beta2.


2006-12-31  GatoLoko  <GatoLoko@gmail.com>

###############################################################################
#
# Cambios en versiones anteriores a la 0.3:
#    No lleve la cuenta :p
#
# Cambios en 0.3:
#    Extraidos los consejos al archivo "consejos.txt".
#    Agregado el comando "/consejos" para mostrar consejos aleatorios.
#    Agregado el comando "/consejo" para mostrar consejos concretos.
#    Agregado el comando "/gato" para mostrar una lista de comandos disponibles
#    Limpiada la salida del uptime.
#    Corregido el numero de pista mostrado por "/gxm".
#
# Cambios en 0.4:
#    Aumentada la prioridad del filtro antispam, asi debe actuar antes que
#        otras funciones del mismo u otro script que se active por los privados.
#    Hay que tener en cuenta que puse un valor al azar porque no encuentro
#        informacion sobre las prioridades, si algo falla habra que probar con
#        otros valores.
#    Agregado el comando "/gos" para mostrar la distribucion y su version. Solo
#        funciona en distribuciones que cumplan con el Linux Standard Base.
#    Agregado codigo de control de errores en la apertura de archivos ( como en