@@ -1,7 +1,7 @@
 [protecciones]
 ban = 0
 ctcps = 1
-hoygan = 0
+hoygan = 1
 canales = #ubuntu,#gatoscript
 
 [media]
@@ -11,4 +11,7 @@ reproductor = rhythmbox
 [comun]
 remotos = 0
 whois = 1
+
+[rss]
+feeds = http://gatoloko.homelinux.org/index.php?q=rss.xml,http://www.slashdot.com/slashdot.rss,http://www.media-vida.net/mediavida.rdf,
 
