@@ -1,2 +1,0 @@
-http://www.slashdot.com/slashdot.rss
-http://www.media-vida.net/mediavida.rdf
